# ima-evm-utils

./: build.sh  configure.ac
.github/workflows/: ci.yml
ci/: alpine.sh  debian.sh  fedora.sh
m4/: default-hash-algo.m4
src/: evmctl.c  hash_info.gen  libimaevm.c
tests/: Makefile.am  fsverity.test  gen-keys.sh  portable_signatures.test
tests/kernel/: .gitignore  Makefile.am  evm_hmac.test  fsverity.test  functions_kernel.sh  mmap_check.test  non_action_rule_flags.test  portable_signatures.test
